# salsa/api/resources/purchase.py
@@ -1,5 +1,4 @@
 import json
-from werkzeug.exceptions import BadRequest, InternalServerError
 from sqlalchemy import exc, or_
 
 from .base import BaseResource
@@ -8,7 +7,11 @@ from salsa.api.resources.helpers import (serialize_return,
                                          sqlalchemy_exception_handler)
 from salsa.permission import only_admin, get_user, get_user_id_from_user, is_user_admin
 from salsa.utils.decorators import decorate_all_methods
+from salsa.exc import InvalidRequest
 
+
+BAD_AS_ERROR = ('Invalid "user_as" parameter is passed in. '
+                'Please use [buyer] or [seller]')
 
 @decorate_all_methods(sqlalchemy_exception_handler)
 class PurchaseResource(BaseResource):
@@ -27,12 +30,22 @@ class PurchaseResource(BaseResource):
         instances = super().retrieve_list(**kwargs)
 
         if not is_user_admin(get_user(kwargs)):
-            # Get all of the purchases made by user_id, and
-            # all of the purchases that are made to this user_id's listings
+
+            if 'user_as' not in kwargs:
+                raise InvalidRequest(BAD_AS_ERROR)
+            user_as = kwargs.pop('user_as')
             user_id = get_user_id_from_user(get_user(kwargs))
-            instances = instances.join(Listing).filter(or_(
-                self.model.user_id == user_id,
-                Listing.user_id == user_id))
+
+            if user_as == 'buyer':
+                # Get all of the purchases made by user_id
+                instances = instances.filter(
+                    self.model.user_id == user_id)
+            elif user_as == 'seller':
+                # Get all of the purchases made to this user_id's listings
+                instances = instances.join(Listing).filter(
+                    Listing.user_id == user_id)
+            else:
+                raise InvalidRequest(BAD_AS_ERROR)
 
         return instances
 
